--- a/app/index.pug
+++ b/app/index.pug
@@ -9,5 +9,10 @@ block content
 	include pug/sections/bonus
 	include pug/sections/ukrainian-study
 	include pug/sections/future
+	include pug/sections/benefits
+	include pug/sections/security
+	include pug/sections/fast-consultation
+	include pug/sections/bonus
+	include pug/sections/chance
 block footer
 	include pug/layouts/footer
