--- a/app/pug/layouts/header.pug
+++ b/app/pug/layouts/header.pug
@@ -23,7 +23,7 @@ include ../helpers/mixins
 								p
 									span.v-color-brand-3 * 
 									|9 из 10 детей наших клиентов остаются жить в Европе после окончания лицея или техникума в Польше
-			.v-col-12.v-col-sm-5.v-col-md-4
+			+e.column._form.col-12.col-sm-5.col-md-4
 				+b.shadow
 					+e.header
 						+e.P.title
