--- a/app/sass/components/_quadro.scss
+++ b/app/sass/components/_quadro.scss
@@ -28,5 +28,17 @@ $quadro-size_md: 204px;
 			}
 		}
 	}
-	
+	&_style-2 &{
+		@include e('part'){
+			@include m('3'){
+				background-color: $color-brand-2;
+			}
+			@include m('5'){
+				background-color: $color-brand-2;
+			}
+			@include m('7'){
+				background-color: $color-brand-3;
+			}
+		}
+	}
 }
