--- a/app/sass/components/text/_title.scss
+++ b/app/sass/components/text/_title.scss
@@ -4,9 +4,8 @@ $sizes: (
 		xs:   18px
 	),
 	'v-title-sm': (
-		sm:   20px,
-		md:   30px,
-		lg:   40px
+		sm:   21px,
+		md:   24px
 	),
 	'v-title-md': (
 		sm:   30px,
