--- a/app/pug/layouts/header.html
+++ b/app/pug/layouts/header.html
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-      <div class="v-col-12 v-col-sm-5 v-col-md-4">
+      <div class="v-site-header__column v-site-header__column_form v-col-12 v-col-sm-5 v-col-md-4">
         <div class="v-shadow">
           <div class="v-shadow__header">
             <p class="v-shadow__title">Запишитесь на <span class="v-color-brand-2">бесплатную консультацию </span>и мы предварительно оценим шансы Вашего ребенка на поступление
