--- a/app/sass/components/_icon.scss
+++ b/app/sass/components/_icon.scss
@@ -23,4 +23,41 @@
 			height: 90px;
 		}
 	}
+	&_left{
+		margin-bottom: 30px;
+		@include min(md){
+			margin-bottom: 45px;
+		}
+	}
+	&_left &{
+		@include e('header'){
+			margin-bottom: 15px;
+		}
+		@include e('img'){
+			height: 60px;
+		}
+		@include e('title'){
+			font-family: 'FormularBold';
+			font-size: 19px;
+			line-height: 1.1;
+		}
+		@include min(md){
+			@include e('header'){
+				display: flex;
+				flex-flow: row wrap;
+				align-items: center;
+			}
+			@include e('title'){
+				flex-grow: 1;
+				flex-basis: 0;
+				padding-left: 15px;
+			}
+		}
+		@include min(lg){
+			@include e('title'){
+				font-size: 21px;
+				padding-right: 30px;
+			}
+		}
+	}
 }
