--- a/app/index.pug
+++ b/app/index.pug
@@ -14,5 +14,6 @@ block content
 	include pug/sections/fast-consultation
 	include pug/sections/bonus
 	include pug/sections/chance
+	include pug/sections/results
 block footer
 	include pug/layouts/footer
