--- a/app/sass/sections/_future.scss
+++ b/app/sass/sections/_future.scss
@@ -1,6 +1,7 @@
 @include b('future'){
 	position: relative;
 	z-index: 1;
+	padding-top: 30px;
 	margin-bottom: -15px;
 	@include e('column'){
 		@include m('text'){
