--- a/app/sass/sections/_benefits.scss
+++ b/app/sass/sections/_benefits.scss
@@ -1,9 +1,12 @@
 @include b('benefits'){
 	position: relative;
-	@include padding-y(65px, 65px);
+	@include padding-y(90px, 65px);
 	color: $color-white;
 	@include m('organization'){
 		@include bg('../img/bg-benefit.jpg');
+	}
+	@include m('result'){
+		@include bg('../img/bg-benefit-result.jpg');
 	}
 	@media screen{
 		@include min(md){
