--- a/app/index.pug
+++ b/app/index.pug
@@ -15,5 +15,6 @@ block content
 	include pug/sections/bonus
 	include pug/sections/chance
 	include pug/sections/results
+	include pug/sections/for-what
 block footer
 	include pug/layouts/footer
