--- a/app/sass/components/_quadro.scss
+++ b/app/sass/components/_quadro.scss
@@ -41,4 +41,34 @@ $quadro-size_md: 204px;
 			}
 		}
 	}
+	&_style-3 &{
+		@include e('part'){
+			@at-root{
+				%style-3-brand-2{
+					background-color: $color-brand-2;
+				}
+				%style-3-brand-3{
+					background-color: $color-brand-3;
+				}
+			}
+			@include m('1'){
+				@extend %style-3-brand-2;
+			}
+			@include m('2'){
+				@extend %style-3-brand-2;
+			}
+			@include m('4'){
+				@extend %style-3-brand-2;
+			}
+			@include m('3'){
+				@extend %style-3-brand-3;
+			}
+			@include m('5'){
+				@extend %style-3-brand-3;
+			}
+			@include m('7'){
+				@extend %style-3-brand-3;
+			}
+		}
+	}
 }
