--- a/app/sass/sections/_future.scss
+++ b/app/sass/sections/_future.scss
@@ -56,9 +56,12 @@
 			left: 30px;
 		}
 		@include m('4'){
-			left: calc(50% + 75px);
+			left: calc(50%);
 			filter: blur(5px);
 			font-size: 100px;
+			@include min(sm){
+				left: calc(50% + 75px);
+			}
 		}
 	}
 }
