End Reviews Section & Start Review Video Section

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1329,7 +1329,7 @@ a, button {
 }
 
 .v-btn_size-lg {
-  padding: 20px 15px;
+  padding: 20px 15px 22px 15px;
   font-size: 17px;
 }
 
@@ -2298,6 +2298,46 @@ input[type="checkbox"]:checked + .control__indicator:before {
   font-size: 12px;
 }
 
+.v-answer {
+  padding-top: 150px;
+  padding-bottom: 45px;
+}
+
+.v-answer__item:not(:last-child) {
+  margin-bottom: 45px;
+}
+
+.v-answer__item-title {
+  margin-bottom: 30px;
+}
+
+.v-answer__item-column_image {
+  text-align: center;
+}
+
+.v-answer__item-image {
+  width: 80%;
+}
+
+@media (min-width: 768px) {
+  .v-answer__item {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .v-answer__item:not(:last-child) {
+    margin-bottom: 90px;
+  }
+  .v-answer__item:nth-child(odd) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+  }
+}
+
 .v-benefits {
   position: relative;
   padding-top: 90px;
@@ -2313,6 +2353,12 @@ input[type="checkbox"]:checked + .control__indicator:before {
 
 .v-benefits_result {
   background: url("../img/bg-benefit-result.jpg") 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.v-benefits_children {
+  background: url("../img/bg-benefit-children.jpg") 0 0 no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
 }
@@ -2514,6 +2560,72 @@ input[type="checkbox"]:checked + .control__indicator:before {
   }
 }
 
+.test rect,
+.test path {
+  color: #ddd;
+}
+
+@media (min-width: 1025px) {
+  .v-review__shadow {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+}
+
+.v-review-item {
+  margin-bottom: 45px;
+}
+
+.v-review-item__content {
+  margin-bottom: 30px;
+}
+
+.v-review-item__info {
+  font-family: 'FormularBold';
+}
+
+@media (min-width: 768px) {
+  .v-review-item__footer {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+
+    -webkit-box-orient: horizontal;
+
+    -webkit-box-direction: reverse;
+
+    -webkit-flex-flow: row-reverse wrap;
+
+    -ms-flex-flow: row-reverse wrap;
+
+    flex-flow: row-reverse wrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
+  .v-review-item__info {
+    padding-right: 30px;
+    text-align: right;
+
+    -webkit-box-flex: 1;
+
+    -webkit-flex-grow: 1;
+
+    -ms-flex-positive: 1;
+
+    flex-grow: 1;
+    -webkit-flex-basis: 0;
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+  }
+}
+
 .v-security {
   position: relative;
   padding-top: 50px;
@@ -2595,23 +2707,23 @@ input[type="checkbox"]:checked + .control__indicator:before {
   display: block;
 }
 
-.modal, .modal_showing, .modal__box {
+.v-modal, .v-modal_showing, .v-modal__box {
   -webkit-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease;
 }
 
-.modal, .modal_showing {
+.v-modal, .v-modal_showing {
   visibility: hidden;
   opacity: 0;
 }
 
-.modal_showing_in {
+.v-modal_showing_in {
   visibility: visible;
   opacity: 1;
 }
 
-.modal__box {
+.v-modal__box {
   position: relative;
   padding: 40px 15px 30px;
   margin: 30px auto;
@@ -2623,33 +2735,33 @@ input[type="checkbox"]:checked + .control__indicator:before {
   transform: translateY(-200%);
 }
 
-.modal__box_white {
+.v-modal__box_white {
   background-color: #fff;
 }
 
-.modal_showing_in .modal__box {
+.v-modal_showing_in .v-modal__box {
   -webkit-transform: none;
   -ms-transform: none;
   transform: none;
 }
 
 @media (min-width: 480px) {
-  .modal__box {
+  .v-modal__box {
     padding: 48px 24px;
   }
-  .modal__box_default {
+  .v-modal__box_default {
     width: 460px;
   }
 }
 
 @media (min-width: 768px) {
-  .modal__box_big {
+  .v-modal__box_big {
     width: 600px;
     margin: 30px auto;
   }
 }
 
-.modal__close {
+.v-modal__close {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -2669,27 +2781,27 @@ input[type="checkbox"]:checked + .control__indicator:before {
   -webkit-tap-highlight-color: transparent;
 }
 
-.modal__close:hover {
+.v-modal__close:hover {
   color: #ff911b;
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
-.modal__content {
+.v-modal__content {
   display: none;
 }
 
-.modal_showing_in .modal__content {
+.v-modal_showing_in .v-modal__content {
   display: block;
 }
 
-.modal__body {
+.v-modal__body {
   font-size: 15px;
   color: #616161;
 }
 
-.modal__inner {
+.v-modal__inner {
   max-height: 60vh;
   padding-right: 15px;
   padding-left: 15px;
@@ -2697,30 +2809,30 @@ input[type="checkbox"]:checked + .control__indicator:before {
   -webkit-overflow-scrolling: touch;
 }
 
-.modal__inner p {
+.v-modal__inner p {
   margin-bottom: 15px;
 }
 
-.modal__inner p:last-child {
+.v-modal__inner p:last-child {
   margin-bottom: 0;
 }
 
 @media (min-width: 768px) {
-  .modal__inner {
+  .v-modal__inner {
     max-height: 350px;
   }
-  .modal__inner::-webkit-scrollbar {
+  .v-modal__inner::-webkit-scrollbar {
     width: 7.5px;
   }
-  .modal__inner::-webkit-scrollbar-track {
+  .v-modal__inner::-webkit-scrollbar-track {
     background-color: #ddd;
   }
-  .modal__inner::-webkit-scrollbar-thumb {
+  .v-modal__inner::-webkit-scrollbar-thumb {
     background-color: darkgrey;
   }
 }
 
-.modal__title {
+.v-modal__title {
   position: relative;
   padding-bottom: 7.5px;
   margin-bottom: 20px;
@@ -2732,7 +2844,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
   letter-spacing: 1.5px;
 }
 
-.modal__title:after {
+.v-modal__title:after {
   position: absolute;
   top: 100%;
   left: 50%;
@@ -2746,23 +2858,23 @@ input[type="checkbox"]:checked + .control__indicator:before {
 }
 
 @media (min-width: 480px) {
-  .modal {
+  .v-modal {
     font-size: 18px;
     letter-spacing: 2.5px;
   }
 }
 
-.modal__video {
+.v-modal__video {
   margin-top: 30px;
 }
 
-.modal__iframe {
+.v-modal__iframe {
   display: block;
   width: 100%;
   min-height: 300px;
 }
 
-.modal {
+.v-modal {
   position: fixed;
   top: 0;
   right: 0;
@@ -2783,11 +2895,11 @@ input[type="checkbox"]:checked + .control__indicator:before {
   backface-visibility: hidden;
 }
 
-.modal_showing_in {
+.v-modal_showing_in {
   overflow-y: visible;
 }
 
-.modal-open {
+.v-modal-open {
   overflow-x: hidden;
   overflow-y: hidden;
 }
