--- a/app/pug/layouts/nav.html
+++ b/app/pug/layouts/nav.html
@@ -18,7 +18,7 @@
           <li class="v-nav__menu-item"><a href="#section-review">Отзывы родителей</a>
           </li>
           <li class="v-nav__menu-item">
-            <button class="v-btn v-btn_navigation v-effect v-effect_bounce-top" data-action="vmodal" data-open="#form">Записаться на консультацию
+            <button class="v-btn v-btn_navigation v-effect v-effect_bounce-top" data-action="v-modal" data-open="#modal-form">Записаться на консультацию
             </button>
           </li>
         </nav>
