--- a/app/sass/components/button/_helpers.scss
+++ b/app/sass/components/button/_helpers.scss
@@ -3,7 +3,7 @@ $btn-default-padding: 10px 16px;
 $btn-default-size: 14px;
 
 // Button large
-$btn-large-padding: 20px 15px;
+$btn-large-padding: 20px 15px 22px 15px;
 $btn-large-size: 17px;
 
 // Button border
