--- a/app/index.pug
+++ b/app/index.pug
@@ -18,6 +18,8 @@ block content
 	include pug/sections/for-what
 	include pug/sections/answer
 	include pug/sections/reviews
+	include pug/sections/review-video
+	include pug/sections/bonus
 block footer
 	include pug/layouts/footer
 	+b.modal#modal-form
