--- a/app/pug/sections/reviews.pug
+++ b/app/pug/sections/reviews.pug
@@ -7,14 +7,14 @@ include ../helpers/mixins
 	.v-container
 		+e.shadow.shadow__
 			+e.header
-				+e.H3.title.title-md
+				+b.H3.title-md.offset-static-md
 					+b.SPAN.color-brand-2 Отзывы родителей 
 					| счастливых 
 					br
 					| польских учеников из Украины
 			.v-row
 				+review(reviewClass, 'Светлана и Геннадий Новиковы', 'Крым', 'img/review-1.png')
-					p Мы отправили своего ребенка учиться в Польшу после 7-го класса. Компания “Освита Маркет” очень помогла нам в коммуникации с преподавательским составом, в размещении ребенка. Через представителей компании мы всегда оперативно узнавали о проблемах в учебе, если таковые возникали.
+					p Мы отправили своего ребенка учиться в Польшу после 9-го класса. Компания “Освита Маркет” очень помогла нам в коммуникации с преподавательским составом, в размещении ребенка. Через представителей компании мы всегда оперативно узнавали о проблемах в учебе, если таковые возникали.
 					p Было приятно, что поляки хорошо относятся к нашим детям, во всем помогают. Очень редко бывает, что дети попадают в разные неприятные ситуации, так как за ними постоянно присматривают учителя, воспитатели и психологи. Дети привыкают к самостоятельной жизни!
 				+review(reviewClass, 'Вера Пархоменко', 'Винница', 'img/review-2.png')
 					p О компании “Освита Маркет” услышали от знакомых и сразу решили проконсультироваться насчет поступления. Польский учили всего пару месяцев и по приезду уровень языка был средний. 
@@ -26,7 +26,7 @@ include ../helpers/mixins
 					p Мы обращались в разные компании, так как моя дочь училась в Украине на ветеринара и мы подыскивали техникум с похожей специальностью в Польше. И только “Освита Маркет” предложила учебное заведение, которое полностью нам подходило.
 					p Моя Алиса очень довольна и обучением, и питанием,  и режимом. Много тренировок и отдыха в техникуме, у нее много подруг и друзей, хотя она в учебном заведении одна только из Украины. На сегодня проблем в общении с поляками не возникает ни с языком, ни с традициями
 				+review(reviewClass, 'Наталья Божок', 'Киев', 'img/review-5.png')
-					p Мы отправили дочь в Польшу после 8-го класса и очень переживали, что ребенок в столь ЮНОМ возрасте остался без опеки родителей, да еще и в другой стране…
+					p Мы отправили дочь в Польшу после 9-го класса и очень переживали, что ребенок в столь ЮНОМ возрасте остался без опеки родителей, да еще и в другой стране…
 					p Однако, нас очень удивило прекрасное отношение дирекции школы и опекунов школы как к детям, так и к нам - родителям.
 					p Безусловно, “Освита Маркет” очень помогла нам на всех этапах поступления и даже больше. Мы уже посоветовали Вашу компанию нашим друзьям, и некоторые даже уже заключили контракт с Вами.
 				+review(reviewClass, 'Снежанна Малиновская', 'ГОРОД', 'img/review-6.png')
