--- a/app/sass/sections/_reviews.scss
+++ b/app/sass/sections/_reviews.scss
@@ -1,4 +1,5 @@
 @include b('review'){
+	padding-bottom: 100px;
 	@include e('shadow'){
 		@include min(md){
 			padding-left: 60px;
@@ -9,11 +10,19 @@
 		margin-bottom: 45px;
 		@include e('content'){
 			margin-bottom: 30px;
+			p{
+				&:not(:last-child){
+					margin-bottom: 15px;
+				}
+			}
 		}
 		@include e('info'){
 			font-family: 'FormularBold';
 		}
 		@include min(sm){
+			@include e('content'){
+				min-height: 300px;
+			}
 			@include e('footer'){
 				display: flex;
 				flex-flow: row-reverse wrap;
