--- a/app/pug/sections/results.pug
+++ b/app/pug/sections/results.pug
@@ -2,7 +2,7 @@ include ../bem/index
 include ../helpers/config
 include ../helpers/mixins
 - var iconClass = '_left-icon v-col-12 v-col-sm-6';
-+b.SECTION.benefits._result
++b.SECTION.benefits._result#section-about
 	+quadro('_style-2 benefits__quadro_2')
 	.v-container
 		+b.H3.title-md.title-section Подтверждаем свои слова реальными результатами детей
