--- a/app/pug/sections/reviews.pug
+++ b/app/pug/sections/reviews.pug
@@ -3,7 +3,7 @@ include ../helpers/config
 include ../helpers/mixins
 - var reviewClass = 'v-col-12 v-col-sm-6';
 
-+b.SECTION.review.section
++b.SECTION.review.section#section-review
 	.v-container
 		+e.shadow.shadow__
 			+e.header
