--- a/app/pug/sections/security.pug
+++ b/app/pug/sections/security.pug
@@ -1,6 +1,6 @@
 include ../bem/index
 include ../helpers/config
-+b.SECTION.security
++b.SECTION.security#section-consultation
 	.v-container
 		+b.H3.title-md.title-section Безопасность Вашего ребенка - прежде всего
 		+e.IMG.image(src="img/icon-security.png")
