--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2294,8 +2294,47 @@ input[type="checkbox"]:checked + .control__indicator:before {
   }
 }
 
-.v-footer {
+.v-site-footer {
+  padding-top: 15px;
+  padding-bottom: 15px;
   font-size: 12px;
+  color: #a1a1a1;
+  background-color: #191919;
+}
+
+@media (min-width: 768px) {
+  .v-site-footer__row {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+
+.v-site-footer__link {
+  font-family: 'FormularBold';
+  font-size: 13px;
+  color: inherit;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .v-site-footer__link:not(:last-child) {
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 768px) {
+  .v-site-footer__info {
+    text-align: right;
+  }
+}
+
+.v-site-footer__logo img {
+  max-height: 30px;
+  opacity: .5;
 }
 
 .v-answer {
@@ -2453,6 +2492,146 @@ input[type="checkbox"]:checked + .control__indicator:before {
 
 .v-bonus__content {
   margin-bottom: 30px;
+}
+
+.v-contact {
+  position: relative;
+  z-index: 1;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+@media (min-width: 768px) {
+  .v-contact {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+
+.v-contact__map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.v-contact__info {
+  position: relative;
+  z-index: 1;
+  padding: 30px;
+  margin-left: 10%;
+  background-color: #fff;
+}
+
+@media (min-width: 768px) {
+  .v-contact__info {
+    width: 450px;
+  }
+}
+
+.v-contact__info-title {
+  margin-bottom: 30px;
+  font-family: 'FormularBold';
+  font-size: 22px;
+  line-height: 1.1;
+}
+
+@media (min-width: 768px) {
+  .v-contact__info-title {
+    font-size: 36px;
+  }
+}
+
+.v-contact__info-part {
+  position: relative;
+  padding-left: 30px;
+}
+
+.v-contact__info-part:before {
+  position: absolute;
+  content: "";
+}
+
+.v-contact__info-part:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+@media (min-width: 768px) {
+  .v-contact__info-part {
+    padding-left: 70px;
+  }
+}
+
+.v-contact__info-part_phone:before {
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  background: url("../img/phone.svg") 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+@media (min-width: 768px) {
+  .v-contact__info-part_phone:before {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.v-contact__info-part_email:before {
+  top: 50%;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  background: url("../img/email.svg") 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+@media (min-width: 768px) {
+  .v-contact__info-part_email:before {
+    width: 46px;
+    height: 41px;
+  }
+}
+
+.v-contact__info-link {
+  display: block;
+  font-family: 'FormularBold';
+  color: #0057a2;
+  text-decoration: none;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.v-contact__info-link:hover {
+  color: #8ac5ff;
+}
+
+@media (min-width: 1025px) {
+  .v-contact__info-link {
+    font-size: 24px;
+  }
+}
+
+.v-contact__quadro_2 {
+  right: 0;
+  bottom: -webkit-calc(100% - 34px);
+  bottom: calc(100% - 34px);
+  z-index: 1;
+}
+
+@media (min-width: 1025px) {
+  .v-contact__quadro_2 {
+    bottom: -webkit-calc(100% - 68px);
+    bottom: calc(100% - 68px);
+  }
 }
 
 .v-for-what {
