--- a/app/sass/layouts/footer/_footer.scss
+++ b/app/sass/layouts/footer/_footer.scss
@@ -1,11 +1,45 @@
 $footer-map: (
 	'background'	: #191919,
-	'color'				: #fff
+	'color'				: #a1a1a1
 );
-@include b('footer'){
+@include b('site-footer'){
 	font-size: 12px;
-	// padding-top: 15px;
-	// padding-bottom: 15px;
-	// background-color: getComp('background', $footer-map);
-	// color: getComp('color', $footer-map);	
+	padding-top: 15px;
+	padding-bottom: 15px;
+	background-color: getComp('background', $footer-map);
+	color: getComp('color', $footer-map);
+	
+	@include e('row'){
+		@include min(sm){
+			align-items: center;
+		}
+	}
+
+	@include e('link'){
+		background-color: transparent;
+		border: none;
+		font-family: 'FormularBold';
+		font-size: 13px;
+		color: inherit;
+		outline: none;
+		@include min(sm){
+			&:not(:last-child){
+				margin-right: 15px;
+			}
+		}
+	}
+
+	@include e('info'){
+		@include min(sm){
+			text-align: right;
+		}
+	}
+
+	@include e('logo'){
+		img{
+			max-height: 30px;
+			opacity: 0.5;
+		}
+	}
+
 }
