--- a/app/index.pug
+++ b/app/index.pug
@@ -26,8 +26,8 @@ block footer
 	+b.modal#modal-form
 		+e.box._default
 			+e.header
-				+e.P.title Modal title
-				+e.BUTTON.close(data-close="vmodal") &times;
+				+e.P.title Проконсультироваться бесплатно
+				+e.BUTTON.close(data-close="v-modal") &times;
 			+e.body
 				+b.FORM.form._block(action="mail.php" method="POST")
 					+e.content
@@ -43,13 +43,13 @@ block footer
 		+e.box._default
 			+e.header
 				+e.P.title Политика конфиденциальности
-				+e.BUTTON.close(data-close="vmodal") &times;
+				+e.BUTTON.close(data-close="v-modal") &times;
 			+e.body
 				p Lorem....
 	+b.modal#modal-otkaz
 		+e.box._default
 			+e.header
 				+e.P.title Отказ от ответственности
-				+e.BUTTON.close(data-close="vmodal") &times;
+				+e.BUTTON.close(data-close="v-modal") &times;
 			+e.body
 				p Lorem....
