--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2320,6 +2320,12 @@ input[type="checkbox"]:checked + .control__indicator:before {
   outline: none;
 }
 
+@media (max-width: 767px) {
+  .v-site-footer__link:not(:last-child) {
+    margin-bottom: 15px;
+  }
+}
+
 @media (min-width: 768px) {
   .v-site-footer__link:not(:last-child) {
     margin-right: 15px;
@@ -2329,6 +2335,12 @@ input[type="checkbox"]:checked + .control__indicator:before {
 @media (min-width: 768px) {
   .v-site-footer__info {
     text-align: right;
+  }
+}
+
+@media (max-width: 767px) {
+  .v-site-footer__logo {
+    margin-bottom: 15px;
   }
 }
 
@@ -2497,8 +2509,13 @@ input[type="checkbox"]:checked + .control__indicator:before {
 .v-contact {
   position: relative;
   z-index: 1;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 34px;
+}
+
+@media (max-width: 767px) {
+  .v-contact {
+    margin-top: 150px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -2508,25 +2525,34 @@ input[type="checkbox"]:checked + .control__indicator:before {
   }
 }
 
-.v-contact__map {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+@media (max-width: 767px) {
+  .v-contact__map {
+    width: 100%;
+    height: 500px;
+  }
+}
+
+@media (min-width: 768px) {
+  .v-contact__map {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .v-contact__info {
   position: relative;
   z-index: 1;
   padding: 30px;
-  margin-left: 10%;
   background-color: #fff;
 }
 
 @media (min-width: 768px) {
   .v-contact__info {
     width: 450px;
+    margin-left: 10%;
   }
 }
 
