--- a/app/sass/sections/_contact.scss
+++ b/app/sass/sections/_contact.scss
@@ -1,17 +1,25 @@
 @include b('contact'){
 	position: relative;
 	z-index: z-index('default');
-	@include padding-y(100px);
-
+	@include padding-y(#{$quadro-size / 3}, null);
+	@include max(sm){
+		margin-top: 150px;
+	}
 	@include min(sm){
 		@include padding-y(200px);
 	}
 
 	@include e('map'){
-		position: absolute;
-		left: 0;
-		top: 0;
-		@include size(100%);
+		@include max(sm){
+			height: 500px;
+			width: 100%;
+		}
+		@include min(sm){
+			position: absolute;
+			left: 0;
+			top: 0;
+			@include size(100%);
+		}
 	}
 
 	@include e('info'){
@@ -19,10 +27,11 @@
 		z-index: z-index('default');
 		background-color: #fff;
 		padding: 30px;
-		margin-left: 10%;
+		
 	
 		@include min(sm){
 			width: 450px;
+			margin-left: 10%;
 		}
 
 		@include ee('title'){
