Start Working With Cookie.js

--- a/app/pug/sections/bonus.pug
+++ b/app/pug/sections/bonus.pug
@@ -24,6 +24,7 @@ include ../helpers/config
 						li Что делать, если ребенок заболел?
 				.v-row
 					.v-col-12.v-col-md-6
+						#timerContainer
 					.v-col-12.v-col-md-6
 						+b.shadow
 							+e.content
