--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1351,7 +1351,7 @@ a, button {
 
 .v-btn_navigation {
   color: #fff;
-  background-color: #ff9d35;
+  background-color: #0065bc;
 }
 
 @media (max-width: 1024px) {
@@ -1835,7 +1835,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
     width: 100%;
     height: 56px;
     padding: 11px 0;
-    background-color: #ff911b;
+    background-color: #0057a2;
     -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
     box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
 
@@ -1881,7 +1881,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
     height: 100%;
     padding: 0 0 100px 0;
     overflow-y: auto;
-    background-color: #ff911b;
+    background-color: #0057a2;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
     transition: all .5s ease;
@@ -2138,7 +2138,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
     width: 55px;
     height: 56px;
     content: "";
-    background-color: #ce6a00;
+    background-color: #002e56;
     opacity: 0;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
@@ -2150,7 +2150,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
     right: 0;
     min-width: 180px;
     padding: 15px;
-    background-color: #ff911b;
+    background-color: #0057a2;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
     transition: all .5s ease;
