--- a/app/pug/layout.pug
+++ b/app/pug/layout.pug
@@ -9,6 +9,9 @@ html(lang="ru")
 			+css("//fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;subset=cyrillic")
 			+css("css/style.css")
 		block js
+			+js("js/lib/jquery.min.js")
+			+js("js/lib/jquery.cookies.2.2.0.js")
+			+js("js/lib/cookietimer.js")
 			+js("js/lib/smooth-scroll.min.js")
 			+js("js/vanilla.main.js")
 
